# moneyflow

./: Cargo.toml
migrations/: 20251107222824_create_user_table.sql  20251107223011_create_categories_table.sql  20251107223535_create_transactions_table.sql
src/: main.rs
src/controllers/: auth.rs  profile.rs
src/db/: user.rs
