[package]
name = "moneyflow"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = {version = "1.0.228", features=["derive"]}
serde_json = "1.0.145"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono" ] }
tokio = {version = "1.48.0", features= ["full"]}
dotenvy = "0.15"
bcrypt = "0.15"


[profile.dev.package.sqlx-macros]
opt-level = 3
